kdots: always style the plus button to be there on mobile devices, no matter their dimensions. fixes: Ipads could not add entrys when requesting mobile mode

--- a/kdots/css/kdots.css
+++ b/kdots/css/kdots.css
@@ -1888,6 +1888,25 @@ et2-dialog > [slot="label"] et2-toolbar [slot="list"] :hover::part(base) {
     --sl-input-border-color: transparent;
   }
 }
+html:not(.desktop) et2-button-icon.plus_button {
+  display: flex;
+  position: fixed !important;
+  right: 15px;
+  bottom: 15px;
+  font-size: 45px;
+  line-height: 45px;
+  border-radius: var(--sl-border-radius-circle);
+  z-index: 100;
+  background-color: var(--template-custom-color, var(--application-color, var(--primary-color, var(--sl-color-primary-500))));
+  border: none;
+  margin: 0;
+  padding: 0;
+  color: var(--sl-color-neutral-0);
+}
+html:not(.desktop) et2-button-icon.plus_button:hover,
+html:not(.desktop) et2-button-icon.plus_button:active {
+  background-color: #0c5da5;
+}
 /**
  * These are utility classes used throughout egroupware, but aren't in etemplate.css
  * Most of this kind of thing will probably migrate from etemplate.css into here as webcomponents take over widget styles
